# a-server

./: .env.sample  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/models/: client.rs  config.rs  connection_stats.rs  mod.rs  response.rs  server_connection_stats.rs
src/models/dto/: calculator_dto.rs  mod.rs
src/services/: mod.rs  not_found.rs  work_service.rs
src/utils/: utils.rs
