[package]
name = "a-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
dotenv = "0.15"
rand = "0.8.5"
futures-util = "0.3.30"